--- a/gardenshop/login.css
+++ b/gardenshop/login.css
@@ -4,7 +4,7 @@ body {
     align-items: center; 
     min-height: 100vh; 
     margin: 0; 
-    background-color: #94c7e2;
+    background-color: #95c0b5;
 }
 
 div {
